--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "components-as-props",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 11343",
+    "dev": "next dev --port 13346",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
